# HomologicalThreading

./: .gitignore  README.ja.md  README.md  build.sh  hello.py  main.py  pyproject.toml
data/: N10M100.data
scripts/: __init__.py  analysis.py  plot.py  plot_betti.py  plot_pd.py
src/: __init__.py  main.py  test.data  tmp.py
src/fortran/: Makefile  compute.f90
src/homological_threading/: __init__.py  lammps_io.py  main.py
src/homological_threading/fortran/:    Makefile  compute.f90
src/python/: io.py  lammps_io.py  main.py
tests/: test.py
